--- a/index.html
+++ b/index.html
@@ -1078,9 +1078,9 @@
                                                                         </span>
                                                                         <div class="pwr-sec-cta__cta-wrapper">
                                                                             <div class="pwr-sec-cta__cta--vertical pwr-cta pwr-cta--regular-border aos-init" data-aos="fade-in" data-aos-delay="50">
-                                                                                <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Learn More">Learn More</a>                    
+                                                                                <a class="pwr-cta_button" target="_blank" href="about.html" title="Button Learn More">Learn More</a>                    
                                                                             </div>
-                                                                        </div>
+                                                                        </div> 
                                                                     </div>
                                                                 </div>
                                                             </div>
