--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                                                                 <div class="pwr-cta-container pwr-sec-mockup__cta-container pwr--clearfix" tmp-data-aos="fade-in" tmp-data-aos-delay="50">
                                                                                     <div class="pwr--neg-margin-lr-10">
                                                                                         <div class="pwr-cta-container__cta pwr-sec-mockup__cta pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01">
-                                                                                            <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Talk to an Expert">Talk to an Expert</a>                    
+                                                                                            <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Join Us">Join Us</a>                    
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -447,7 +447,7 @@
                                                                             <div class="pwr-rich-text pwr-sec-txt__left aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                 <p>Accolade Core isn’t just another tool—it’s the heartbeat of your innovation strategy. Think about how hard it is to manage data, align teams, and drive meaningful insights in today’s competitive landscape. What if you had a platform that not only streamlined your processes but also empowered your teams to innovate smarter and faster?<br><br></p>
                                                                                 <div class="pwr-adc-content pwr-adc-content--button ">
-                                                                                    <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button " href="https://www.wellspring.com/get-started" rel="noopener" title="Button Learn More">Talk to an Expert</a></div>
+                                                                                    <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button " href="https://www.wellspring.com/get-started" rel="noopener" title="Button Learn More">Join Us</a></div>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -484,7 +484,7 @@
                                                                                 <div class="pwr-cta-container pwr-sec-mockup__cta-container pwr--clearfix aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                     <div class="pwr--neg-margin-lr-10">
                                                                                         <div class="pwr-cta-container__cta pwr-sec-mockup__cta pwr-cta pwr-cta--regular-border  ">
-                                                                                            <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Talk to an Expert">Talk to an Expert</a>                    
+                                                                                            <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Join Us">Join Us</a>                    
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -593,7 +593,7 @@
                                                                                 <div class="pwr-cta-container pwr-sec-mockup__cta-container pwr--clearfix aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                     <div class="pwr--neg-margin-lr-10">
                                                                                         <div class="pwr-cta-container__cta pwr-sec-mockup__cta pwr-cta pwr-cta--regular-border  ">
-                                                                                            <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Talk to an Expert">Talk to an Expert</a>                    
+                                                                                            <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Join Us">Join Us</a>                    
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -630,7 +630,7 @@
                                                                                 <div class="pwr-cta-container pwr-sec-mockup__cta-container pwr--clearfix aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                     <div class="pwr--neg-margin-lr-10">
                                                                                         <div class="pwr-cta-container__cta pwr-sec-mockup__cta pwr-cta pwr-cta--regular-border  ">
-                                                                                            <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Talk to an Expert">Talk to an Expert</a>                    
+                                                                                            <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Join Us">Join Us</a>                    
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -667,7 +667,7 @@
                                                                                 <div class="pwr-cta-container pwr-sec-mockup__cta-container pwr--clearfix aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                     <div class="pwr--neg-margin-lr-10">
                                                                                         <div class="pwr-cta-container__cta pwr-sec-mockup__cta pwr-cta pwr-cta--regular-border  ">
-                                                                                            <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Talk to an Expert">Talk to an Expert</a>                    
+                                                                                            <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Join Us">Join Us</a>                    
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -1045,7 +1045,7 @@
                                                                                     <p>&nbsp;</p>
                                                                                 </div>
                                                                                 <div class="pwr-adc-content pwr-adc-content--button ">
-                                                                                    <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button " href="https://www.wellspring.com/get-started" rel="noopener" title="Button Learn More">Talk to an Expert</a></div>
+                                                                                    <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button " href="https://www.wellspring.com/get-started" rel="noopener" title="Button Learn More">Join Us</a></div>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -1254,7 +1254,7 @@
                                                                         <h3 class="pwr-sec-cta__title pwr-heading-style--default pwr-sec-cta__title--vertical pwr--toc-ignore aos-init" id="ready-to-discover-how-accolade-can-help-drive-growth-innovation-at-your-organization" data-aos="fade-in" data-aos-delay="50">Ready to Discover How Accolade Can Help Drive Growth Innovation at Your Organization?</h3>
                                                                         <div class="pwr-sec-cta__cta-wrapper">
                                                                             <div class="pwr-sec-cta__cta--vertical pwr-cta pwr-cta--regular-border aos-init" data-aos="fade-in" data-aos-delay="50">
-                                                                                <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Talk to an Expert">Talk to an Expert</a>                    
+                                                                                <a class="pwr-cta_button " href="https://www.wellspring.com/get-started" title="Button Join Us">Join Us</a>                    
                                                                             </div>
                                                                         </div>
                                                                     </div>
