--- a/index.html
+++ b/index.html
@@ -1317,6 +1317,13 @@
                                                                           Contact Us
                                                                         </a>
                                                                     </li>
+                                                                    <li class="hs-menu-item hs-menu-depth-2 " role="none">
+                                                                      <p style="font-size: 13px !important;">
+                                                                        CIN - U01631KA2010PTC096843 <br>
+                                                                        Address - 2, Western Urban Rd, Davri Nagar,  Siddharth Nagar, Santacruz East, Mumbai, Maharashtra 400055, India <br>
+                                                                        Phone - 0674 2702416 <br>
+                                                                      </p>
+                                                                  </li>
                                                                 </ul>
                                                             </li>
                                                         </ul>
