remove more junk in header

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             <div id="hs_cos_wrapper_page_settings" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module"  data-hs-cos-general-type="widget" data-hs-cos-type="module"></div>
             <div data-global-resource-path="POWER x WELLSPRING/templates/partials/header.html">
                 <header class="header">
-                    <a href="#" class="pwr-header__skip">Skip to content</a>
                     <div class="header__container">
                         <div id="hs_cos_wrapper_header_page" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module"  data-hs-cos-general-type="widget" data-hs-cos-type="module">
                             <!-- templateType: none -->
@@ -58,53 +57,9 @@
                                 }
                             </style>
                             <div id="pwr-js-burger" class="pwr-burger vanilla pwr--dark pwr--page-editor-fix " style="top: 0px;">
-                                <a href="#" class="pwr-burger__trigger-close vanilla">
-                                Close <span class="pwr-burger__icon-close"></span>
-                                </a>
-                                <div class="pwr-burger__menu pwr-js-menu pwr-scroll-shadow__wrapper pwr-scroll-shadow__wrapper--vert pwr-scroll-shadow__root pwr-scroll-shadow__root--vert pwr-scroll-shadow--is-scrolled-left pwr-scroll-shadow--is-scrolled-right pwr-scroll-shadow--is-scrolled-top pwr-scroll-shadow--is-scrolled-bottom pwr-scroll-shadow--is-overflowing">
-                                    <span id="hs_cos_wrapper_menu_184210497186" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_menu"  data-hs-cos-general-type="widget" data-hs-cos-type="menu">
-                                        <div class="hs-menu-wrapper no-flyouts hs-menu-flow-vertical" aria-label="main navigation" role="navigation" data-sitemap-name="default" id="hs_menu_wrapper_menu_184210497186" data-menu-id="184210497186" "="">
-                                            
-                                        </div>
-                                    </span>
-                                </div>
                                 <div class="pwr-burger-bottom-bar">
-                                    <div class="pwr-burger-bottom-bar__item hs-search-field">
-                                        <a href="https://www.wellspring.com/accolade?utm_medium=ppc&amp;utm_source=adwords&amp;utm_campaign=Sopheon_Non-Branded_Opt&amp;utm_term=innovation%20management%20system&amp;hsa_grp=166564044478&amp;hsa_mt=e&amp;hsa_acc=2903686308&amp;hsa_tgt=kwd-300245624622&amp;hsa_kw=innovation%20management%20system&amp;hsa_src=g&amp;hsa_net=adwords&amp;hsa_cam=21558789341&amp;hsa_ver=3&amp;hsa_ad=708475669910&amp;gad_source=1&amp;gclid=EAIaIQobChMIhZqKqOyCjAMVVZJQBh27FBjLEAAYBCAAEgJu3_D_BwE#" id="pwr-js-burger-search__trigger" class="pwr-burger-bottom-bar__item-link pwr-burger-search__trigger">
-                                            <div class="pwr-header-right-bar__icon pwr--padding-r-sm">
-                                                <span id="hs_cos_wrapper_header_page_" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_icon"  data-hs-cos-general-type="widget" data-hs-cos-type="icon">
-                                                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" aria-hidden="true">
-                                                        <g id="search1_layer">
-                                                            <path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
-                                                        </g>
-                                                    </svg>
-                                                </span>
-                                            </div>
-                                            <span>SEARCH</span>
-                                        </a>
-                                        <div id="pwr-js-burger-search__inner" class="pwr-burger-bottom-bar__inner pwr-burger-search__inner pwr-form pwr-form--style-1">
-                                            <div id="hs-search-field__translations"></div>
-                                            <div class="hs-search-field__bar">
-                                                <form action="https://www.wellspring.com/hs-search-results">
-                                                    <div class="pwr--relative">
-                                                        <input type="text" id="pwr-js-burger-search__input" class="pwr-burger-search__input hs-search-field__input" name="term" autocomplete="off" aria-label="Search" placeholder="Type search here">
-                                                        <button class="pwr-search-field__icon" type="submit" aria-label="Search Button">
-                                                            <span id="hs_cos_wrapper_header_page_" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_icon"  data-hs-cos-general-type="widget" data-hs-cos-type="icon">
-                                                                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" aria-hidden="true">
-                                                                    <g id="search2_layer">
-                                                                        <path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
-                                                                    </g>
-                                                                </svg>
-                                                            </span>
-                                                        </button>
-                                                    </div>
-                                                    <input type="hidden" name="limit" value="5"><input type="hidden" name="property" value="title"><input type="hidden" name="property" value="description"><input type="hidden" name="property" value="html"><input type="hidden" name="property" value="author_full_name"><input type="hidden" name="property" value="author_handle"><input type="hidden" name="property" value="tag"><input type="hidden" name="type" value="SITE_PAGE"><input type="hidden" name="type" value="LISTING_PAGE"><input type="hidden" name="type" value="BLOG_POST">
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
                                     <div class="pwr-burger-bottom-bar__item pwr-cta pwr-cta--primary-border pwr-cta--small">                   
-                                        <a href="https://www.wellspring.com/get-started" target="_blank" rel="noopener" class="pwr-cta_button " aria-label="Button Contact">Contact</a>
+                                        <a href="contact.html" target="_blank" rel="noopener" class="pwr-cta_button " aria-label="Button Contact">Contact</a>
                                     </div>
                                 </div>
                             </div>
@@ -123,40 +78,8 @@
                                             </div>
                                         </div>
                                         <div id="pwr-js-header-right-bar" class="pwr-header-right-bar ">
-                                            
                                             <div class="pwr-header-right-bar__item pwr-header-right-bar__cta pwr-cta pwr-cta--primary-border pwr-cta--small">
                                                 <a href="contact.html" target="_blank" rel="noopener" class="pwr-cta_button " aria-label="Button Contact">Contact</a>
-                                            </div>
-                                        </div>
-                                        <div id="pwr-js-header-search" class="pwr-header-search vanilla hs-search-field">
-                                            <div class="pwr-header-search__inner">
-                                                <div id="hs-search-field__translations"></div>
-                                                <div class="hs-search-field__bar">
-                                                    <form action="https://www.wellspring.com/hs-search-results">
-                                                        <div class="pwr--relative">
-                                                            <input type="text" id="pwr-header-search__input" class="pwr-header-search__input hs-search-field__input hs-search-field__input" name="term" autocomplete="off" aria-label="Search" placeholder="">
-                                                            <button class="pwr-search-field__icon" type="submit" aria-label="Search Button">
-                                                                <span id="hs_cos_wrapper_header_page_" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_icon"  data-hs-cos-general-type="widget" data-hs-cos-type="icon">
-                                                                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" aria-hidden="true">
-                                                                        <g id="search4_layer">
-                                                                            <path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
-                                                                        </g>
-                                                                    </svg>
-                                                                </span>
-                                                            </button>
-                                                            <a href="https://www.wellspring.com/accolade?utm_medium=ppc&amp;utm_source=adwords&amp;utm_campaign=Sopheon_Non-Branded_Opt&amp;utm_term=innovation%20management%20system&amp;hsa_grp=166564044478&amp;hsa_mt=e&amp;hsa_acc=2903686308&amp;hsa_tgt=kwd-300245624622&amp;hsa_kw=innovation%20management%20system&amp;hsa_src=g&amp;hsa_net=adwords&amp;hsa_cam=21558789341&amp;hsa_ver=3&amp;hsa_ad=708475669910&amp;gad_source=1&amp;gclid=EAIaIQobChMIhZqKqOyCjAMVVZJQBh27FBjLEAAYBCAAEgJu3_D_BwE#" id="pwr-js-header-search__close" aria-label="Close Search" class="pwr-header-search__close">
-                                                            <span class="pwr-header-search__close-icon"></span>
-                                                            </a>
-                                                        </div>
-                                                        <input type="hidden" name="limit" value="5"><input type="hidden" name="property" value="title"><input type="hidden" name="property" value="description"><input type="hidden" name="property" value="html"><input type="hidden" name="property" value="author_full_name"><input type="hidden" name="property" value="author_handle"><input type="hidden" name="property" value="tag"><input type="hidden" name="type" value="SITE_PAGE"><input type="hidden" name="type" value="LISTING_PAGE"><input type="hidden" name="type" value="BLOG_POST">
-                                                        <div class="hs-search-field__suggestions">
-                                                            <div class="pwr-suggestions-panel">
-                                                                <div class="pwr-suggestions--title"></div>
-                                                                <div class="pwr-suggestions-wrapper"></div>
-                                                            </div>
-                                                        </div>
-                                                    </form>
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
