add adv and company

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <link class="hs-async-css" rel="stylesheet" href="files/template_child.min.css" as="style">
     </head>
     <body data-aos-easing="ease" data-aos-duration="100" data-aos-delay="50">
+        <p style="position: absolute; z-index: 99999999; left: 50%; transform: translateX(-50%); text-align: center; color: rgb(255, 255, 255); font-family: Arial, Helvetica, sans-serif;">
+          Advertisement
+        </p>
         <div id="hs-web-interactives-top-push-anchor" class="go3670563033"></div>
         <div class="body-wrapper   hs-content-id-185337192560 hs-site-page page  
             pwr-v--44 line-numbers" data-aos-global-disable="phone" data-aos-global-offset="130" data-aos-global-delay="50" data-aos-global-duration="100">
@@ -137,7 +140,10 @@
                                                                         <div class="page-center">
                                                                             <div class="pwr-sec-mockup__content pwr-sec-mockup__content--center pwr-sec-mockup__content--left" style="width: 48%; height: 540px;" data-pwr-mh="sec-mockup-content-height">
                                                                                 <span class=" pwr-heading-style--h4 pwr-sec-mockup__title-intro  " tmp-data-aos="fade-in" tmp-data-aos-delay="50">
-                                                                                Accolade</span>
+                                                                                  <h2>
+                                                                                    {Company}
+                                                                                  </h2>
+                                                                                </span>
                                                                                 <h1 class="pwr-sec__title pwr-heading-style--h2 pwr-sec-mockup__title" tmp-data-aos="fade-in" tmp-data-aos-delay="50" id="drive-strategic-growth-with-innovation-portfolio-orchestration">Drive Strategic Growth with Innovation Portfolio Orchestration</h1>
                                                                                 <span class="pwr-rich-text pwr-sec__desc pwr-sec-mockup__desc" tmp-data-aos="fade-in" tmp-data-aos-delay="50">
                                                                                     <h5 style="text-align: left;" id="project-management-is-table-stakes.-manage-innovation-as-a-lever-for-growth-and-turn-your-product-pipeline-into-a-predictable-engine-for-market-success."><span style="color: #000000;">Project management is table stakes. Manage innovation as a lever for growth and turn your product pipeline into a predictable engine for market success.</span></h5>
