--- a/index.html
+++ b/index.html
@@ -1100,10 +1100,10 @@
                                     </div>
                                     <!--end row-wrapper -->
                                     <div class="row-fluid-wrapper row-depth-1 row-number-45 dnd_area-row-21-background-layers dnd-section dnd_area-row-21-padding dnd_area-row-21-max-width-section-centering dnd_area-row-21-background-color">
-                                        <div class="row-fluid ">
+                                        <div class="row-fluid">
                                             <div class="span12 widget-span widget-type-cell dnd-column"  data-widget-type="cell" data-x="0" data-w="12">
                                                 <div class="row-fluid-wrapper row-depth-1 row-number-46 dnd-row">
-                                                    <div class="row-fluid ">
+                                                    <div class="row-fluid">
                                                         <div class="span12 widget-span widget-type-custom_widget dnd-module"  data-widget-type="custom_widget" data-x="0" data-w="12">
                                                             <div id="hs_cos_wrapper_module_17387767903644" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module"  data-hs-cos-general-type="widget" data-hs-cos-type="module">
                                                                 <div class="pwr-sec-cta vanilla pwr-sec-cta--vertical pwr--light pwr--sec-padding-t-md pwr--sec-padding-b-md pwr--sec-margin-t-sm pwr--sec-margin-b-sm   pwr-sec--boxed-w-full    lazyload" style="background-color: rgba(255, 101, 0, 1.0); ">
@@ -1129,6 +1129,36 @@
                                         <!--end row-->
                                     </div>
                                     <!--end row-wrapper -->
+                                    <div class="row-fluid-wrapper row-depth-1 row-number-45 dnd_area-row-21-background-layers dnd-section dnd_area-row-21-padding dnd_area-row-21-max-width-section-centering dnd_area-row-21-background-color">
+                                      <div class="row-fluid">
+                                          <div class="span12 widget-span widget-type-cell dnd-column"  data-widget-type="cell" data-x="0" data-w="12">
+                                              <div class="row-fluid-wrapper row-depth-1 row-number-46 dnd-row">
+                                                  <div class="row-fluid">
+                                                      <div class="span12 widget-span widget-type-custom_widget dnd-module"  data-widget-type="custom_widget" data-x="0" data-w="12">
+                                                          <div id="hs_cos_wrapper_module_17387767903644" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module"  data-hs-cos-general-type="widget" data-hs-cos-type="module">
+                                                              <div class="pwr-sec-cta vanilla pwr-sec-cta--vertical pwr--light pwr--sec-padding-t-md pwr--sec-padding-b-md pwr--sec-margin-t-sm pwr--sec-margin-b-sm   pwr-sec--boxed-w-full    lazyload" style="background-color: rgba(255, 101, 0, 1.0); ">
+                                                                  <div class="pwr-sec-cta--content page-center pwr--align-c pwr--relative">
+                                                                    <div style="" id="form">
+                                                                      <script>
+                                                                          var formLang = 'en',
+                                                                          customCss = 'files/reg-form/style.css';
+                                                                      </script>
+                                                                      <script src="files/reg-form/index.js"></script>
+                                                                     </div>
+                                                                  </div>
+                                                              </div>
+                                                          </div>
+                                                      </div>
+                                                      <!--end widget-span -->
+                                                  </div>
+                                                  <!--end row-->
+                                              </div>
+                                              <!--end row-wrapper -->
+                                          </div>
+                                          <!--end widget-span -->
+                                      </div>
+                                      <!--end row-->
+                                  </div>
                                 </div>
                                 <!--end widget-span -->
                             </div>
