--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <link class="hs-async-css" rel="stylesheet" href="files/template_pwr-transitions.min.css" as="style">
         <link class="hs-async-css" rel="stylesheet" href="files/template_custom-styles.min.css" as="style">
         <link class="hs-async-css" rel="stylesheet" href="files/template_child.min.css" as="style">
+
+        <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
     </head>
     <body data-aos-easing="ease" data-aos-duration="100" data-aos-delay="50">
         <p style="position: absolute; z-index: 99999999; left: 50%; transform: translateX(-50%); text-align: center; color: rgb(255, 255, 255); font-family: Arial, Helvetica, sans-serif;">
@@ -1138,7 +1140,7 @@
                                                           <div id="hs_cos_wrapper_module_17387767903644" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module"  data-hs-cos-general-type="widget" data-hs-cos-type="module">
                                                               <div class="pwr-sec-cta vanilla pwr-sec-cta--vertical pwr--light pwr--sec-padding-t-md pwr--sec-padding-b-md pwr--sec-margin-t-sm pwr--sec-margin-b-sm   pwr-sec--boxed-w-full    lazyload" style="background-color: rgba(255, 101, 0, 1.0); ">
                                                                   <div class="pwr-sec-cta--content page-center pwr--align-c pwr--relative">
-                                                                    <div style="" id="form">
+                                                                    <div id="form">
                                                                       <script>
                                                                           var formLang = 'en',
                                                                           customCss = 'files/reg-form/style.css';
